# ancla

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: app.rs  build_info.rs  cli_env.rs  lib.rs  main.rs  opts.rs
cli/src/commands/: buckets.rs  info.rs  kvs.rs  mod.rs  pages.rs  query.rs
cli/src/commands/kvs/: get.rs  list.rs  mod.rs
cli/src/commands/pages/: list.rs  mod.rs  unreachable.rs
crates/ancla/: Cargo.toml
crates/ancla/src/: bolt.rs  db.rs  errors.rs  lib.rs  utils.rs
crates/ancla/src/query/: buckets.rs  engine.rs  mod.rs  pages.rs
crates/boltypes/: Cargo.toml
crates/boltypes/src/: lib.rs
src/: bolt.rs  db.rs  errors.rs  lib.rs  main.rs  utils.rs
testdata/: data.db  data.json  kv  page.json  test.db  test1.db
tools/scripts/: license.sh
