[package]
name = "ancla"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A Rust command line tool of golang's bolt database"
repository = "https://github.com/lsytj0413/ancla"
documentation = "https://docs.rs/ancla/latest/ancla/"
categories = ["command-line-utilities", "database-implementations"]
keywords = ["cli", "bbolt", "database", "db"]
rust-version = "1.81"
authors = ["lsytj0413 <lsytj0413@gmail.com>"]


[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.20", features = ["derive"] }
fnv_rs = "0.4.3"
page_size = "=0.4.2"
prettytable = "0.10.0"
tui = "0.19.0"
typed-builder = "0.20.0"

[[bin]]
name = "anclalet"
# path = "src/bin/anclalet/main.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
# edition = "2024"
# crate-type = ["bin"]
required-features = []
