[package]
name = "boltcli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A Rust command line tool of golang's bolt database"
repository = "https://github.com/lsytj0413/ancla"
documentation = "https://docs.rs/ancla/latest/ancla/"
categories = ["command-line-utilities", "database-implementations"]
keywords = ["cli", "bbolt", "database", "db"]
rust-version = "1.81"
authors = ["lsytj0413 <lsytj0413@gmail.com>"]
build = "build.rs"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = { version = "7.1" }
cling = { version = "0.1", default-features = false, features = ["derive"] }
anyhow = "1.0.68"
clap-verbosity-flag = { version = "3.0.2" }
tokio = { version = "1.44.1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "parking_lot",
] }
ancla = { path = "../crates/ancla" }

[build-dependencies]
vergen = { version = "8.0.0", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "cargo",
] }


[[bin]]
name = "boltcli"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = 3
lto = true