[package]
name = "boltcli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A Rust command line tool of golang's bolt database"
repository = "https://github.com/lsytj0413/ancla"
documentation = "https://docs.rs/ancla/latest/ancla/"
categories = ["command-line-utilities", "database-implementations"]
keywords = ["cli", "bbolt", "database", "db"]
rust-version = "1.81"
authors = ["lsytj0413 <lsytj0413@gmail.com>"]
build = "build.rs"
publish = false

[dependencies]
ancla = { workspace = true }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
cling = { version = "0.1", features = ["derive"] }

comfy-table = "7.1.0"
serde_json = "1.0.117"
serde_json_path = "0.7"
rayon = "1.10.0"
tokio = { version = "1", features = ["full"] }
datafusion = { workspace = true }

[build-dependencies]
vergen = { version = "8.0.0", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "cargo",
] }


[[bin]]
name = "boltcli"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = 3
lto = true