[package]
name = "ancla"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A library to read golang's bolt database"
repository = "https://github.com/lsytj0413/ancla"
documentation = "https://docs.rs/ancla/latest/ancla/"
categories = ["database-implementations"]
keywords = ["bbolt", "database", "db"]
rust-version = "1.81"
authors = ["lsytj0413 <lsytj0413@gmail.com>"]

[features]
default = []
binrw = ["dep:binrw"]

[dependencies]
bitflags = "2.6.0"
fnv_rs = "0.4.3"
thiserror = "2.0.0"
typed-builder = "0.20.0"
binrw = { version = "0.6.0", optional = true }

[dev-dependencies]
serde_json = { workspace = true}
serde = { workspace = true }