[package]
name = "boltypes"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A library to read golang's bolt database"
repository = "https://github.com/lsytj0413/ancla"
documentation = "https://docs.rs/ancla/latest/ancla/"
categories = ["database-implementations"]
keywords = ["bbolt", "database", "db"]
rust-version = "1.81"
authors = ["lsytj0413 <lsytj0413@gmail.com>"]

[features]
default = []
binrw = ["dep:binrw"]
serde = ["dep:serde"]

[dependencies]
fnv_rs = "0.4.3"
bitflags = "2.6.0"
thiserror = "2.0.0"
binrw = { version = "0.6.0", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { workspace = true}